# wavin_sentio_proxy

./: .gitignore  pyproject.toml  setup.cfg
.github/scripts/: update__version__.py
.github/workflows/: release-drafter.yml  release.yml
src/wavin_sentio_proxy/: __init__.py  model_parser.py  models.py  parser_base.py  proxy_modeladapter.py  responses.py  wavin_sentio_proxy.py
src/wavin_sentio_proxy/models/: __init__.py  basemodel.py  wavin_sentio.py
tests/: credentials.py  test_login.py  test_proxy.py
